# commercial-studio-photos-generator

./: .editorconfig  .env  .env.example  .gitignore  Makefile  README.md  centrifugo.config.example.json  docker-compose.yaml
server/: Dockerfile  go.mod  go.sum  handlers.go  index.html  main.go  producer.go  services.go
server/cmd/: main.go
server/internal/: consumer.go  handlers.go  producer.go  services.go  startup.go  utils.go
server/static/: image.html  index.html  polling.html
worker/: Dockerfile  pyproject.toml  run.sh
worker/app/: main.py  stable_diffusion.py
worker/app/common/: app_runtime.py  centrifugo_client.py  config.py  s3.py  schemas.py
worker/app/common/amqp/: __init__.py  consumer.py  manager.py  schemas.py
worker/startup/: rabbitmq.py  s3.py
